no-scroll class while animation The body no longer has a scrollbar because of the created div

--- a/styles/contact-dialog.css
+++ b/styles/contact-dialog.css
@@ -197,7 +197,7 @@ input:focus {
 }
 
 .contact-created {
-  position: absolute;
+  position: fixed;
   margin-top: 70px;
   background-color: #2a3647;
   color: white;
@@ -208,7 +208,7 @@ input:focus {
   display: flex;
   justify-content: center;
   align-items: center;
-  transform: translateX(200%);
+  transform: translateX(250%);
   opacity: 0;
   transition:
     transform 0.3s ease,
@@ -218,4 +218,8 @@ input:focus {
 .contact-created.slide-in {
   transform: translateX(0);
   opacity: 1;
+}
+
+.no-scroll {
+  overflow: hidden;
 }
